--- a/src/components/SceneCard/Details.scss
+++ b/src/components/SceneCard/Details.scss
@@ -80,6 +80,11 @@
     white-space: pre-line;
 
     margin-top: $row-gap;
-    margin-bottom: $row-gap;
+  }
+
+  /* -------------------------------- Director -------------------------------- */
+
+  .vsc-director {
+    margin-top: $row-gap;
   }
 }
